MZ-261 add date-time to coming auctions header

--- a/src/Mzayad.Web/Content/site-auctions.less
+++ b/src/Mzayad.Web/Content/site-auctions.less
@@ -67,9 +67,9 @@
     }
 }
 
-.live-ribbon-container{
-    left:-5px;
-    position:relative;
+.live-ribbon-container {
+    left: -5px;
+    position: relative;
 }
 
 .sponsor-ribbon {
@@ -90,5 +90,19 @@
         -moz-text-overflow: ellipsis;
         text-overflow: ellipsis;
         text-align: left;
+    }
+}
+
+.auction-bid-form {
+    direction: ltr !important;
+}
+
+.auction-coming-header {
+    background-color: @base;
+    color: @white;
+    padding: 5px;
+
+    .duration {
+        font-size: 13px;
     }
 }
