fixed email template logo alt text

--- a/src/Mzayad.Web/Views/Shared/EmailTemplate.cshtml
+++ b/src/Mzayad.Web/Views/Shared/EmailTemplate.cshtml
@@ -91,7 +91,7 @@
                     <table bgcolor="@headerBackground" style="width: 100%; background-color: @headerBackground">
                         <tr>
                             <td style="padding: 15px;">
-                                <img src="@logoUrl" style="max-width: 100%; width: @(logoWidth)px; height: @(logoHeight)px;" width="@logoWidth" height="@logoHeight" alt="Easy Shippings" />
+                                <img src="@logoUrl" style="max-width: 100%; width: @(logoWidth)px; height: @(logoHeight)px;" width="@logoWidth" height="@logoHeight" alt="Zeedli" />
                             </td>
                         </tr>
                     </table>
