--- a/src/Mzayad.Web/Views/Products/Index.cshtml
+++ b/src/Mzayad.Web/Views/Products/Index.cshtml
@@ -40,11 +40,9 @@
             }
             @if (!string.IsNullOrWhiteSpace(Model.VideoUrl))
             {
-                <dt ></dt>
-                <dd class="vido-link">
-                    <a href="@Model.VideoUrl" target="blank">
-                        <span><i class="fa fa-2x fa-pad-right fa-youtube" aria-hidden="true"></i> @Global.WatchVideo</span>
-                    </a>
+                <dt></dt>
+                <dd>
+                    <iframe width="100%" height="315" src="@Model.VideoUrl" frameborder="0" allowfullscreen></iframe>
                 </dd>
 
             }
