MZ-264 add banner feature.

--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -377,6 +377,9 @@ body {
   color: #fff !important;
   text-decoration: underline;
 }
+.hidden {
+  display: none;
+}
 form section,
 section.form-section {
   background: #f5f5f5;
