--- a/src/Mzayad.Web/Views/Shared/_Layout_AdminMenu.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_AdminMenu.cshtml
@@ -7,6 +7,7 @@
             <li><a href="@Url.Action("Index", "Orders", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-truck"></i>Orders</a></li>
             <li><a href="@Url.Action("Index", "Auctions", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-gavel"></i>Auctions</a></li>
             <li><a href="@Url.Action("Index", "PageManagement", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-file-text-o"></i>Site Pages</a></li>
+            <li><a href="@Url.Action("Index", "Banners", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-file-image-o"></i>Banners</a></li>
             <li><a href="@Url.Action("Index", "Products", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-cube"></i>Products</a></li>
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Categories", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Categories</a></li>
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Specifications", new {Area="Admin"})"><i class="fa fa-fw fa-pad-right fa-reorder"></i>Specifications</a></li>
