--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -57,6 +57,9 @@
             text-align: center;
             border-right: solid 1px #ccc;
         }
+        .pagging:last-child {
+            border-right: none !important;
+        }
             .pagging:hover {
                 background-color: #33ace0;
                 color: #fff;
