--- a/src/Mzayad.Web/Areas/admin/Views/Banners/Index.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Banners/Index.cshtml
@@ -21,7 +21,7 @@
         columns.Bound(i => i.ImgSmUrl).ImageCell().ClientTemplate("<img src='#=ImgSmUrl#' />").Title("Image");
         columns.Bound(i => i.Title);
         columns.Bound(i => i.SecondaryTitle);
-        columns.Bound(i => i.CreatedUtc).Format("{0:dd/MM/yyyy}").Title("Added");
+        columns.Bound(i => i.Url).Title("Url");
         columns.LinkColumn("Edit", "banners/#=BannerId#");
     })
 )
