--- a/src/Mzayad.Web/Views/Products/Index.cshtml
+++ b/src/Mzayad.Web/Views/Products/Index.cshtml
@@ -59,7 +59,7 @@
         <dl class="dl-horizontal">
             <dt>@Global.Name</dt>
             <dd>@Model.Name</dd>
-            <dt>@Global.Price</dt>
+            <dt>@Global.RetailPrice</dt>
             <dd>@CurrencyFormatter.Format(Model.RetailPrice)</dd>
             @if (Model.SponsorId.HasValue)
             {
