MZ-283 add more friend API.

--- a/src/Mzayad.Web/Views/User/Inbox.cshtml
+++ b/src/Mzayad.Web/Views/User/Inbox.cshtml
@@ -1,4 +1,4 @@
-﻿@model Mzayad.Web.Controllers.InboxViewModel
+﻿@model Mzayad.Web.Models.User.InboxViewModel
 
 @{
     ViewBag.Title = Global.Inbox;
