--- a/src/Mzayad.Web/Views/Orders/BuyNow.cshtml
+++ b/src/Mzayad.Web/Views/Orders/BuyNow.cshtml
@@ -13,7 +13,10 @@
 {
     @Html.AntiForgeryToken()
 
-    <p class="text-center"><button type="submit" class="btn btn-default">@Global.ContinueToCheckout</button></p>
+    <p class="text-center">
+        <button type="submit" name="action" value="1" class="btn btn-default">@Global.ContinueToCheckout</button>
+        <button type="submit" name="action" value="2" class="btn btn-bid">@Global.AddToCart</button>
+    </p>
 }
 
 @section scripts {
