--- a/src/Mzayad.Web/Views/Shared/_Layout_NavbarCart.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_NavbarCart.cshtml
@@ -7,9 +7,7 @@
 @if (shoppingCart != null && shoppingCart.Items.Any())
 {
     <li class="visible-xs">
-        <ul class="navbar-nav">
-            <li><a class="navbar-link" href="@Url.Action("Cart", "Shop", new {Area = ""})">@Global.ShoppingCart [@shoppingCart.Items.Sum(i => i.Quantity)]</a></li>
-        </ul>
+        <a class="navbar-link" href="@Url.Action("Cart", "Shop", new {Area = ""})">@Global.ShoppingCart [@shoppingCart.Items.Sum(i => i.Quantity)]</a>
     </li>
     <li class="dropdown hidden-xs">
         <a href="#" class="navbar-link dropdown-toggle" data-toggle="dropdown">
@@ -27,19 +25,19 @@
                                 </td>
                                 <td class="cart-item-product-name" colspan="5">@cartItem.Name</td>
                             </tr>
-                            <tr class="row-bottom">
-                                <td class="fit-cell">
-                                    @Html.Raw(string.Format(Global.QuantityLabelWithValue, cartItem.Quantity))
-                                </td>
-                                <td></td>
-                                <td class="fit-cell">
-                                    @Html.Raw(string.Format(Global.UnityLabelWithValue, CurrencyFormatter.Format(cartItem.ItemPrice)))
-                                </td>
-                                <td></td>
-                                <td class="fit-cell">
-                                    @Html.Raw(string.Format(Global.TotalLabelWithValue, CurrencyFormatter.Format(cartItem.TotalPrice)))
-                                </td>
-                            </tr>
+                                <tr class="row-bottom">
+                                    <td class="fit-cell">
+                                        @Html.Raw(string.Format(Global.QuantityLabelWithValue, cartItem.Quantity))
+                                    </td>
+                                    <td></td>
+                                    <td class="fit-cell">
+                                        @Html.Raw(string.Format(Global.UnityLabelWithValue, CurrencyFormatter.Format(cartItem.ItemPrice)))
+                                    </td>
+                                    <td></td>
+                                    <td class="fit-cell">
+                                        @Html.Raw(string.Format(Global.TotalLabelWithValue, CurrencyFormatter.Format(cartItem.TotalPrice)))
+                                    </td>
+                                </tr>
                         }
                     </tbody>
                 </table>
@@ -59,3 +57,4 @@
         </ul>
     </li>
 }
+
