--- a/src/Mzayad.Web/Views/User/Friends.cshtml
+++ b/src/Mzayad.Web/Views/User/Friends.cshtml
@@ -12,6 +12,20 @@
     }
 </div>
 
+<div >
+    <div class="row">
+        <div class="col-md-4 pull-right">
+            @using (Html.BeginForm("Search", "Friends"))
+            {
+                @Html.AntiForgeryToken()
+                <div class="form-group">
+                    <input type="text" name="username" id="username" class="form-control" placeholder="Search by username"/>
+                </div>
+            }
+        </div>
+    </div>
+</div>
+
 @if (!Model.Any())
 {
     @Html.StatusMessage(Global.NoFriends, StatusMessageType.Information)
@@ -21,97 +35,8 @@
 <div class="panel dashboard-panel">
     <div class="panel-body">
         @foreach (var item in Model)
-            {
-            <div id="dashboard-header">
-                <div class="row" id="dv_@item.User.Id">
-                    @if (item.User.ProfileStatus == Mzayad.Models.Enum.UserProfileStatus.Private && !item.AreFriends && !item.Me)
-                    {
-                        <div class="col-md-6">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div id="dashboard-avatar">
-                                        <img class="img-responsive" src="@item.User.AvatarUrl" alt="@item.User.UserName" />
-                                    </div>
-                                </div>
-                                <div class="col-sm-9">
-                                    <div id="dashboard-details" class="dashboard-cell">
-                                        <div id="dashboard-username" class="text-uppercase">
-                                            <a href="@Url.Action("UserProfile", "User", new { area = "", userName = item.User.UserName })" style="color:#33ace0">@item.User.UserName</a>
-                                        </div>
-                                        <div class="dashboard-label" style="font-size:1.05em;margin-top:5px;">
-                                            @(Global.PrivateProfileMessage + " " + Global.Click) <span style="cursor:pointer;text-decoration:underline" onclick="friendRequest('@item.User.UserName')">@Global.Here</span> @Global.ToSendFriendRequestMessage
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    }
-                    else
-                    {
-                        <div class="col-md-6">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div id="dashboard-avatar">
-                                        <img class="img-responsive" src="@item.User.AvatarUrl" alt="@item.User.UserName" />
-                                    </div>
-                                </div>
-                                <div class="col-sm-9">
-                                    <div id="dashboard-details" class="dashboard-cell">
-                                        <div id="dashboard-username" class="text-uppercase">
-                                            <a href="@Url.Action("UserProfile", "User", new { area = "",  userName = item.User.UserName })" style="color:#33ace0">@item.User.UserName</a>
-                                        </div>
-                                        <div id="dashboard-level" class="text-uppercase">
-                                            @Global.Level @item.User.Level
-                                        </div>
-                                        <div id="dashboard-progress">
-                                            <div class="progress pull-left">
-                                                <div class="progress-bar" role="progressbar" aria-valuenow="@item.LevelPercentage" aria-valuemin="0" aria-valuemax="100" style="width: @item.LevelPercentage%;">
-                                                    <span class="sr-only">@item.LevelPercentage% Complete</span>
-                                                </div>
-                                            </div>
-                                            <small>@(item.User.Xp)/@(item.NextLevel.XpRequired)</small>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <div class="dashboard-cell">
-                                        <div class="dashboard-number">@item.User.Xp</div>
-                                        <div class="dashboard-label text-uppercase">@Global.Experience</div>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-                                    <a href="@Url.Action("UserTrophies", "User")" class="dashboard-cell">
-                                        <div class="dashboard-number">@item.Trophies.Count</div>
-                                        <div class="dashboard-label text-uppercase">@Global.Trophies</div>
-                                    </a>
-                                </div>
-                                <div class="col-sm-4">
-                                    <a href="@Url.Action("UserFriends", "User", new { userName = item.User.UserName })" class="dashboard-cell">
-                                        <div class="dashboard-number">@item.Friends.Count</div>
-                                        <div class="dashboard-label text-uppercase">@(item.Friends.Count == 1 ? Global.Friend : Global.Friends)</div>
-                                    </a>
-                                </div>
-                            </div>
-                            @if (item.AreFriends && !item.Me)
-                            {
-                                <div class="row">
-                                    <div class="col-md-12" style="text-align:right;padding-right:45px;">
-                                        <a class="btn btn-default btn-rounded text-uppercase" style="padding: 5px 20px;margin-bottom: 10px;"
-                                           href="@Url.Action("SendMessage", "Friends", new { area = "", userName = item.User.UserName })">
-                                            <i class="fa fa-fw fa-envelope"></i>
-                                            @Global.Chat
-                                        </a>
-                                    </div>
-                                </div>
-                            }
-                        </div>
-                    }
-                </div>
-            </div>
+        {
+            @Html.DisplayForModel(item)
         }
     </div>
 </div>
