--- a/src/Mzayad.Web/Views/Friends/Search.cshtml
+++ b/src/Mzayad.Web/Views/Friends/Search.cshtml
@@ -1,12 +1,63 @@
 ﻿@using OrangeJetpack.Base.Web
-@model IEnumerable<Mzayad.Web.Models.User.UserProfileViewModel>
+@model Mzayad.Web.Controllers.SearchFriendViewModel
 
 @{
     ViewBag.Title = Global.SearchFriend;
 }
 
-@if (!Model.Any())
+<div>
+    <div class="row">
+        <div class="col-md-4 pull-right">
+            @using (Html.BeginForm("Search", "Friends"))
+            {
+                @Html.AntiForgeryToken()
+                <div class="form-group">
+                    <input value="@Model.Query" type="text" name="username" id="username" class="form-control" placeholder="Search by username" />
+                    
+                </div>
+            }
+        </div>
+    </div>
+</div>
+
+@if (!Model.SearchResult.Any())
 {
     @Html.StatusMessage(Global.NoFriendsFound, StatusMessageType.Information)
     return;
 }
+
+<div class="panel dashboard-panel">
+    <div class="panel-body">
+        @foreach (var item in Model.SearchResult)
+        {
+            @Html.Partial("_layout_friends", item)
+        }
+    </div>
+</div>
+@section scripts
+{
+    <script>
+        function friendRequest(username) {
+            $.ajax({
+                url: '@Url.Content("~/friends/sendrequest")',
+                type: 'POST',
+                data: { 'userName': username },
+                dataType: 'json',
+                success: function (e) {
+                    if (e == '1') {
+                        $('#dvMessage').html('@Html.Raw(Html.StatusMessage(Global.FriendRequestSuccessMessage,StatusMessageType.Success).ToString().Replace("'","\""))');
+                    }
+                    else {
+                        $('#dvMessage').html('@Html.Raw(Html.StatusMessage(Global.FriendRequestFailMessage, StatusMessageType.Error).ToString().Replace("'","\""))');
+                    }
+                },
+                error: function () {
+                    $('#dvMessage').html('@Html.Raw(Html.StatusMessage(Global.FriendRequestFailMessage, StatusMessageType.Error).ToString().Replace("'","\""))');
+                }
+            });
+        }
+
+    </script>
+}
+
+
