--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -310,8 +310,9 @@ else
                     function() {
                         var slider = $("#slider");
                         slider.nivoSlider({
-                            //effect: 'sliceDownLeft',
-                            pauseTime: 5000,
+                            effect: 'fade',
+                            animSpeed: 1,
+                            pauseTime: 10000,
                             controlNav: false,
                             prevText: '',
                             nextText: '',
