Fix merege conflict.

--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -315,7 +315,8 @@ else
                 function () {
                     var slider = $("#slider");
                     slider.nivoSlider({
-                        //effect: 'sliceDownLeft',
+                        effect: 'fade',
+                        animSpeed: 1,
                         pauseTime: 5000,
                         controlNav: false,
                         prevText: '',
